<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".addPetActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/edtNaam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/naamDier"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/edtSoort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/soortDier"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/edtRas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/rasDier"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/edtSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/geslachtDier"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edtKleur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/KleurDier"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txtDatum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/geboortedatumlDier"
                android:textSize="20sp"
                tools:text="@string/geboortedatumlDier" />

            <Button
                android:id="@+id/btn_geboortedatum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btngeboortedatumlDier" />

            <Button
                android:id="@+id/btn_dier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addDier"
                android:text="@string/Toevoegen" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>