<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addDatumActivity">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <EditText
                android:id="@+id/edtAgendapunt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/agendapunt"/>

            <TextView
                android:id="@+id/txtDatum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Datum"
                android:textSize="20sp"
                tools:text="@string/Datum" />

            <Button
                android:id="@+id/btn_datum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btndatum" />

            <Button
                android:id="@+id/btn_dier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addDatum"
                android:text="@string/Toevoegen" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>